chore: use List.of